tests/incremental_delete/incremental_delete.exp

Initial status:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 4 errors

Delete c.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 3 errors

Delete b.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 2 errors

Restore b.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 3 errors

Restore c.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 4 errors

Delete d.json:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 4 errors

Delete unchecked.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1

Error ----------------------------------------------- requires_unchecked.js:5:25

Error: requires_unchecked.js:5
  5: var unchecked = require('Unchecked');
                             ^^^^^^^^^^^ Cannot resolve module `Unchecked`.


Found 5 errors

Restore unchecked.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 4 errors

Delete dupe2.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string


Found 3 errors

Restore dupe2.js:
Error ---------------------------------------------------------------- a.js:2:17

Error: a.js:2
  2: var a: string = 0;
                     ^ Cannot assign `0` to `a` because number [1] is incompatible with string [2].
  References:
    2: var a: string = 0;
                       ^ [1]: number
    2: var a: string = 0;
              ^^^^^^ [2]: string

Error ---------------------------------------------------------------- b.js:3:17

Error: b.js:3
  3: var b: number = a;
                     ^ Cannot assign `a` to `b` because string [1] is incompatible with number [2].
  References:
    2: var a: string = 0;
              ^^^^^^ [1]: string. See: a.js:2
    3: var b: number = a;
              ^^^^^^ [2]: number

Error ---------------------------------------------------------------- c.js:3:17

Error: c.js:3
  3: var c: string = b;
                     ^ Cannot assign `b` to `c` because number [1] is incompatible with string [2].
  References:
    3: var b: number = a;
              ^^^^^^ [1]: number. See: b.js:3
    3: var c: string = b;
              ^^^^^^ [2]: string

Error ------------------------------------------------------------- dupe2.js:1:1

Error: dupe2.js:1
  1: /**
     ^ Duplicate module provider for `Dupe`. Change either this module provider or the current module provider [1].
  References:
    1: /**
       ^ [1]: current module provider. See: dupe1.js:1


Found 4 errors

Done!
